--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -2,10 +2,10 @@
 .navbar {
     display: flex;
     justify-content: space-between;
-    padding: 0.8em;
+    padding: 2.8em;
     background-color: black;
 }
-.liste li a{
+/* .liste li a{
     color: white;
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
@@ -19,7 +19,7 @@
 }
 .liste li {
     margin-right: 1em;
-}
+} */
 h1 {
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
@@ -40,16 +40,16 @@ form{
     background-color:wheat;
     border: white 2px solid;
     padding: 19px;
-    width: 23%;
+    width: 40%;
     height: 78%;
     margin: 0 auto;
     /* display: inline-block; */
     border-radius: 10px;
-    margin-top: 10%;
+    margin-top: 7%;
     display: flex;
     flex-direction: column;
-    justify-content: center; /* Centre verticalement */
-    align-items: center; /* Centre horizontalement */
+    justify-content: center; 
+    align-items: center; 
     
 }
 form li a {
