--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -32,7 +32,7 @@ body {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     font-size: 1.2em;
-    background: url("https://www.bioalaune.com/img/article/10203-junk_food.jpg");
+    background: url("https://marcwiner.com/wp-content/uploads/2022/09/Nourriture-americaine-scaled.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     /* background-position: center; */
