--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -1,11 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+body, html {
+    margin: 0;
+    padding: 0;
+}
 .navbar {
     display: flex;
     justify-content: space-between;
     padding: 2.8em;
     background-color: black;
     margin-top: -13px;
+    width: 100%;
 }
+    
+
 /* .liste li a{
     color: white;
     text-decoration: none;
@@ -44,7 +51,7 @@ form{
     text-align: center;
     background-color: white;
     border: white 2px solid;
-    padding: 70px;
+    padding: 65px;
     width: 30%;
     height: 78%;
     margin: 0 auto;
@@ -54,10 +61,11 @@ form{
     display: flex;
     flex-direction: column;
     justify-content: center; 
-    align-items: center; 
-    
+    align-items: center;
+    vertical-align: middle; 
+    margin-bottom: 10px;
 }
-form li a {
+/* form li a {
     color: black;
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
@@ -67,10 +75,11 @@ form li a {
 
 form ul li {
     list-style-type: none;
-    /* margin-left: -15px;  */
+    
     color: black;
     transition: all 0.5s ease 0s;
-}
+} */
+/* margin-left: -15px;  */
 button {
     color: white;
     border: none;
@@ -94,4 +103,24 @@ form button:hover {
     background-color:white;
     color: black;
     transition: all 0.5s ease 0s;
+}
+
+input[type="text"] {
+    width: 200px; /* Ajustez la largeur selon vos préférences */
+    padding: 5px;
+    border: 2px solid #ccc;
+    border-radius: 3px;
+}
+#cadreNom {
+    margin-bottom: 20px;
+}
+#cadreNom label {
+    font-weight: bold;
+} 
+#objet{
+    font-weight: bold;
+}
+p{
+    font-weight: bold;
+    
 }
