--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -5,11 +5,13 @@ body, html {
 }
 .navbar {
     display: flex;
-    justify-content: space-between;
-    padding: 2.8em;
+    padding: -1.2em;
     background-color: black;
     margin-top: -13px;
     width: 100%;
+    text-align: center;
+    justify-content: center;
+    height: 80%;
 }
     
 
@@ -31,9 +33,10 @@ body, html {
 h1 {
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
-    font-size: 3em;
+    font-size: 2em;
     color: white;
-    text-align: center;
+    padding: 10px;
+    
 }
 body {
     font-family: 'Roboto', sans-serif;
@@ -54,10 +57,10 @@ form{
     padding: 65px;
     width: 30%;
     height: 78%;
-    margin: 0 auto;
+    margin: auto;
     /* display: inline-block; */
     border-radius: 10px;
-    margin-top: 7%;
+    margin-top: 2%;
     display: flex;
     flex-direction: column;
     justify-content: center; 
