--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -13,15 +13,6 @@ body, html {
     justify-content: center;
     height: 80%;
 }
-    
-
-/* .liste li a{
-    color: white;
-    text-decoration: none;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    font-size: 1.2em;
-}
 
 .liste {
     display: flex;
@@ -68,21 +59,6 @@ form{
     vertical-align: middle; 
     margin-bottom: 10px;
 }
-/* form li a {
-    color: black;
-    text-decoration: none;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    font-size: 1.2em;
-}
-
-form ul li {
-    list-style-type: none;
-    
-    color: black;
-    transition: all 0.5s ease 0s;
-} */
-/* margin-left: -15px;  */
 button {
     color: white;
     border: none;
@@ -123,7 +99,10 @@ input[type="text"] {
 #objet{
     font-weight: bold;
 }
+#objets {
+    display: flex;
+    justify-content: center;
+}
 p{
     font-weight: bold;
-    
 }
