--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
-body, html {
+
+body,
+html {
     margin: 0;
     padding: 0;
 }
+
 .navbar {
     display: flex;
     padding: -1.2em;
@@ -13,7 +16,7 @@ body, html {
     justify-content: center;
     height: 80%;
 }
-    
+
 
 /* .liste li a{
     color: white;
@@ -36,8 +39,9 @@ h1 {
     font-size: 2em;
     color: white;
     padding: 10px;
-    
+
 }
+
 body {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
@@ -50,7 +54,8 @@ body {
     /* text-align: center; */
 
 }
-form{
+
+form {
     text-align: center;
     background-color: white;
     border: white 2px solid;
@@ -63,11 +68,12 @@ form{
     margin-top: 2%;
     display: flex;
     flex-direction: column;
-    justify-content: center; 
+    justify-content: center;
     align-items: center;
-    vertical-align: middle; 
+    vertical-align: middle;
     margin-bottom: 10px;
 }
+
 /* form li a {
     color: black;
     text-decoration: none;
@@ -96,34 +102,40 @@ button {
 
 form button {
     display: block;
-    background-color:black;
+    background-color: black;
     color: white;
     transition: all 0.5s ease 0s;
     text-align: center;
     margin-top: 50px;
 }
+
 form button:hover {
-    background-color:white;
+    background-color: white;
     color: black;
     transition: all 0.5s ease 0s;
 }
 
 input[type="text"] {
-    width: 200px; /* Ajustez la largeur selon vos préférences */
+    width: 200px;
+    /* Ajustez la largeur selon vos préférences */
     padding: 5px;
     border: 2px solid #ccc;
     border-radius: 3px;
 }
+
 #cadreNom {
     margin-bottom: 20px;
 }
+
 #cadreNom label {
     font-weight: bold;
-} 
-#objet{
+}
+
+#objet {
     font-weight: bold;
 }
-p{
+
+p {
     font-weight: bold;
-    
+
 }
