--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -104,6 +104,14 @@ input[type="text"] {
     font-weight: bold;
 }
 
+#objets {
+    width: 80px;
+    display: flex;
+    flex-flow: column;
+    flex-direction: column;
+
+}
+
 p {
     font-weight: bold;
 }
