--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -80,7 +80,7 @@ form button {
 }
 
 form button:hover {
-    background-color: white;
+    background-color: grey;
     color: black;
     transition: all 0.5s ease 0s;
 }
